    jlowe)

    MAPREDUCE-5982. Task attempts that fail from the ASSIGNED state can
    disappear (Chang Li via jlowe)

    MAPREDUCE-6492. AsyncDispatcher exit with NPE on
    TaskAttemptImpl#sendJHStartEventForAssignedFailTask (Bibin A Chundatt via
    jlowe)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES
 
  NEW FEATURES
  
  IMPROVEMENTS
  
  OPTIMIZATIONS
  
  BUG FIXES
  
    MAPREDUCE-6302. Preempt reducers after a configurable timeout irrespective 
    of headroom. (kasha)
    
    MAPREDUCE-6635. Unsafe long to int conversion in UncompressedSplitLineReader
    and IndexOutOfBoundsException. (Junping Du via vvasudev)

Release 2.7.3 - UNRELEASED
 
 INCOMPATIBLE CHANGES
 
 NEW FEATURES
 
 IMPROVEMENTS
 
    MAPREDUCE-6622. Add capability to set JHS job cache to a
  	task-based limit (rchiang via rkanter)
 
 OPTIMIZATIONS
 
 BUG FIXES
 
   MAPREDUCE-6689. MapReduce job can infinitely increase number of reducer
   resource requests (Wangda Tan via jlowe)

Release 2.7.0 - 2015-04-20
  NEW FEATURES

    MAPREDUCE-6227. DFSIO for truncate. (shv via yliu)

    MAPREDUCE-6228. Add truncate operation to SLive. (Plamen Jeliazkov via shv)

    MAPREDUCE-5583. Ability to limit running map and reduce tasks. 
    (Jason Lowe via junping_du)

  IMPROVEMENTS

    MAPREDUCE-6149. Document override log4j.properties in MR job.
    (Junping Du via harsh)

    MAPREDUCE-6194. Bubble up final exception in failures during creation
    of output collectors (Varun Saxena via harsh)

    MAPREDUCE-5420. Remove mapreduce.task.tmp.dir from mapred-default.xml
    (James Carman via harsh)

    MAPREDUCE-5932. Provide an option to use a dedicated reduce-side shuffle
    log (Gera Shegalov via jlowe)

    MAPREDUCE-6046. Change the class name for logs in RMCommunicator
    (Sahil Takiar via devaraj)

    HADOOP-11032. Replace use of Guava's Stopwatch with Hadoop's StopWatch
    (ozawa)

    MAPREDUCE-6173. Document the configuration of deploying MR over distributed