@@ -40,6 +40,9 @@ Release 2.8.0 - UNRELEASED
   
   OPTIMIZATIONS
   
+    MAPREDUCE-6376. Add avro binary support for jhist files (Ray Chiang via
+    jlowe)
+  
   BUG FIXES
   
     MAPREDUCE-6302. Preempt reducers after a configurable timeout irrespective 
